<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/fundo_camuflado"
    android:orientation="vertical"
    tools:context=".view.CadArmaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/titulo_armamento"
        android:background="#e2dfdf"
        android:textColor="#151414"
        android:textStyle="bold"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
 
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="#e2dfdf"
                android:text="@string/titulo_nomeArma"
                android:textColor="#131313"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="#e2dfdf"
                android:text="@string/edit_tipoProduto"
                android:textColor="#131313"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="#e2dfdf"
                android:text="@string/edit_marcaProduto"
                android:textColor="#131313"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="#e2dfdf"
                android:text="@string/edit_calibreArma"
                android:textColor="#131313"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/editNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="#fff"
                android:hint="@string/hint_nome_arma"
                android:padding="3dp"
                android:textColor="#131313"
                android:textColorHint="#131313" />

            <EditText
                android:id="@+id/editTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="#fff"
                android:textColor="#131313"
                android:hint="@string/hint_tipo_arma"
                android:padding="3dp"
                android:textColorHint="#131313" />

            <EditText
                android:id="@+id/editMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="#fff"
                android:textColor="#131313"
                android:hint="@string/hint_marca_arma"
                android:padding="3dp"
                android:textColorHint="#000" />

            <EditText
                android:id="@+id/editCalibre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:background="#fff"
                android:textColor="#131313"
                android:hint="@string/hint_calibre"
                android:padding="3dp"
                android:textColorHint="#000" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_cad"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:background="#e2dfdf"
            android:layout_margin="5sp"
            android:textStyle="bold"
            android:textColor="#131313"
            android:onClick="cadastrar"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_voltar"
            android:textSize="20sp"
            android:background="#e2dfdf"
            android:textStyle="bold"
            android:textColor="#131313"
            android:layout_margin="5sp"
            android:onClick="cancelar"
            />
    </LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    />


</LinearLayout>





