<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_camuflado"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.ArmamentoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#e2dfdf"
        android:text="@string/titulo_armamento"
        android:textColor="#181717"
        android:textSize="32sp"
        android:textStyle="bold" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120sp"
        android:background="#e2dfdf"
        android:onClick="chamaTelaCadArma"
        android:text="@string/button_cad_arma"
        android:textColor="#131313"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:background="#e2dfdf"
        android:onClick="chamaTelaPesqArma"
        android:text="@string/button_pesq_arma"
        android:textColor="#131313"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btSair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:background="#e2dfdf"
        android:onClick="voltar"
        android:text="@string/sair"
        android:textColor="#131313"
        android:textSize="20sp"
        android:textStyle="bold"
        />

</LinearLayout>