<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_camuflado"
    android:src="@drawable/foto"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="#e2dfdf"
        android:text="@string/titulo_armamento"
        android:textColor="#181717"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/foto" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/faz_login"
                android:textColor="#131313"
                android:textStyle="bold"
                android:background="#e2dfdf"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/faz_senha"
                android:textColor="#131313"
                android:textStyle="bold"
                android:background="#e2dfdf"
                android:textSize="20sp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <EditText
                android:id="@+id/editLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"

                android:background="#fff"
                android:hint="@string/hint_login"
                android:padding="3dp"
                android:textColorHint="#000"
                android:drawableLeft="@drawable/ic_action_login"
                android:textColor="#131313"
                android:inputType="textEmailAddress"
                android:ems="10"/>

            <EditText
                android:id="@+id/editSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_senha"
                android:padding="03dp"
                android:drawableLeft="@drawable/ic_action_name"
                android:layout_margin="5sp"
                android:background="#fff"
                android:textColorHint="#000"
                android:textColor="#131313"
                android:ems="10"
                android:inputType="textPassword" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="10dp"
                android:text="@string/recuperar_senha"
                android:textSize="14dp"
                android:textColor="#090808"
                android:background="#e2dfdf"
                android:textStyle="bold"
                android:onClick="recuperarSenha"/>


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
          <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
              android:id="@+id/btEntrar"
            android:layout_height="wrap_content"
            android:text="@string/button_fazlogin"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:background="#e2dfdf"
            android:layout_margin="5sp"
            android:textStyle="bold" android:textColor="#131313"
            android:onClick="entrar"
            />
    </LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >


</LinearLayout>

    <TextView
        android:id="@+id/Registrar"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="29sp"
        android:background="#e2dfdf"
        android:text="Registrar-se"
        android:textColor="#181717"
        android:textSize="22sp"
        android:onClick="cadastrar"
        android:textStyle="bold" />


</LinearLayout>

